libs/pavex_cli/tests/ui_tests/structs_cannot_be_registered_as_handlers/expectations/stderr.txt
error[E0277]: the trait bound `Streamer: Callable<_>` is not satisfied
   --> src/lib.rs:7:28
    |
7   |     bp.route(GET, "/home", f!(crate::Streamer));
    |        -----               ^^^^^^^^^^^^^^^^^^^
    |        |                   |
    |        |                   the trait `Callable<_>` is not implemented for `Streamer`
    |        |                   this tail expression is of type `RawCallable<Streamer>`
    |        required by a bound introduced by this call
    |
note: required by a bound in `Blueprint::route`
   --> /Users/luca/code/pavex/libs/pavex_builder/src/app.rs:227:12
    |
227 |         F: Callable<HandlerInputs>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Blueprint::route`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `app` due to previous error